[tool.black]
exclude = '''
/(
   node_modules
   | .serverless
)/
'''
[tool.poetry]
name = "instrument-inventory"
version = "21.8.1"
description = "Backend for my instrument inventory app"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^5.1.0"
boto3 = "^1.18.21"
pydantic = {extras = ["ujson"], version = "^1.8.2"}
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-freezegun = "^0.4.2"
ptpython = "^3.0.19"
black = "^21.7b0"
pydantic-to-typescript = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
